# manuscript-audit

./: ENGINEERING_MANIFEST.md  MEMORY.md  README.md  phase12-validated-bundle-20260503.tar.gz.sha256  pixi.toml  pyproject.toml
phase12-validated-bundle-20260502/: .gitignore  MEMORY.md  README.md
phase12-validated-bundle-20260502/.github/: copilot-instructions.md
phase12-validated-bundle-20260502/examples/: software_equivalence_manuscript.md
phase12-validated-bundle-20260502/src/manuscript_audit.egg-info/: PKG-INFO  entry_points.txt  requires.txt
releases/: phase13-status.md  phase13-validated-bundle-20260505.md  release-notes-v0.13.0.md
src/manuscript_audit/: cli.py
src/manuscript_audit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/integration/: test_audit_core.py  test_audit_standard.py  test_cli.py  test_golden_outputs.py  test_revision_verification.py  test_source_verification_workflow.py
tests/unit/: test_agents.py  test_bibliography_additional_calibration.py  test_bibliography_ambiguous_fixture.py  test_bibliography_calibration.py  test_bibliography_confidence.py  test_bibliography_directurl_integration.py  test_bibliography_large_mixed_fixture.py  test_bibliography_metadata.py  test_bibliography_more_edgecases.py  test_bibliography_provider_directurl.py  test_bibliography_verification_calibration.py  test_doi_normalization.py  test_parsers.py  test_phase15_validators.py  test_schemas.py  test_similarity_thresholds.py  test_source_record.py  test_source_verification.py  test_validators.py  test_venue_scoring.py
(+94 files in other folders)
